fixed alignment of permits

--- a/public/css/introHCI.css
+++ b/public/css/introHCI.css
@@ -122,7 +122,7 @@ th {
 }
 
 .permits {
-	margin-top: 150tpx;
+	margin-top: 150px;
 	overflow-y: auto;
 }
 
